--- a/renovations.html
+++ b/renovations.html
@@ -185,6 +185,27 @@
     </section>
 
     <div class="renovation-category">
+            <div class="category-title"><h3>🍳 Livingroom Renovations</h3><p>Modern style and functionality</p></div>
+            <div class="before-after-container">
+                <div class="before-after-item">
+                    <div class="comparison-images">
+                        <div class="comparison-image"><span class="image-label before-label">BEFORE</span><img src="lagos1.jpg" alt="Livingroom Before"></div>
+                        <div class="comparison-image"><span class="image-label after-label">AFTER</span><img src="lagos2.jpg" alt="Livingroom After"></div>
+                    </div>
+                    <div class="project-info">
+                        <h4>Modern Living Room Transformation</h4>
+                        <p>Complete remodel with custom cabinetry and marble countertops.</p>
+                        <div class="project-details">
+                            <div class="detail-item"><span class="detail-label">Location:</span><span class="detail-value">Lagos, Nigeria</span></div>
+                            <div class="detail-item"><span class="detail-label">Duration:</span><span class="detail-value">3 Weeks</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <section class="before-after-section">
+        <div class="renovation-category">
     <div class="category-title">
         <h3>🪜 Staircase & Entrance Renovations</h3>
         <p>Transforming structural spaces into stunning architectural statements</p>
@@ -219,26 +240,6 @@
     </div>
 </div>
 
-    <section class="before-after-section">
-        <div class="renovation-category">
-            <div class="category-title"><h3>🍳 Livingroom Renovations</h3><p>Modern style and functionality</p></div>
-            <div class="before-after-container">
-                <div class="before-after-item">
-                    <div class="comparison-images">
-                        <div class="comparison-image"><span class="image-label before-label">BEFORE</span><img src="lagos1.jpg" alt="Livingroom Before"></div>
-                        <div class="comparison-image"><span class="image-label after-label">AFTER</span><img src="lagos2.jpg" alt="Livingroom After"></div>
-                    </div>
-                    <div class="project-info">
-                        <h4>Modern Living Room Transformation</h4>
-                        <p>Complete remodel with custom cabinetry and marble countertops.</p>
-                        <div class="project-details">
-                            <div class="detail-item"><span class="detail-label">Location:</span><span class="detail-value">Lagos, Nigeria</span></div>
-                            <div class="detail-item"><span class="detail-label">Duration:</span><span class="detail-value">3 Weeks</span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div class="renovation-category">
             <div class="category-title"><h3>🚿 Bathroom Renovations</h3><p>Luxury spa-inspired transformations</p></div>
@@ -281,24 +282,39 @@
         </div>
 
         <div class="renovation-category">
-            <div class="category-title"><h3>🏢 Commercial Renovations</h3><p>Salons, restaurants, and offices</p></div>
-            <div class="before-after-container">
-                <div class="before-after-item">
-                    <div class="comparison-images">
-                        <div class="comparison-image"><span class="image-label before-label">BEFORE</span><img src="https://images.unsplash.com/photo-1556912173-46c336c7fd12?w=800" alt="Office Before"></div>
-                        <div class="comparison-image"><span class="image-label after-label">AFTER</span><img src="https://images.unsplash.com/photo-1600607687920-4e2a09cf159d?w=800" alt="Office After"></div>
+    <div class="category-title">
+        <h3>🛋️ Family Lounge Renovations</h3>
+        <p>Creating comfortable entertainment spaces where families gather</p>
+    </div>
+    <div class="before-after-container">
+        <div class="before-after-item">
+            <div class="comparison-images">
+                <div class="comparison-image">
+                    <span class="image-label before-label">BEFORE</span>
+                    <img src="lounge.jpg" alt="Family Lounge Before">
+                </div>
+                <div class="comparison-image">
+                    <span class="image-label after-label">AFTER</span>
+                    <img src="lounge2.jpg" alt="Family Lounge After">
+                </div>
+            </div>
+            <div class="project-info">
+                <h4>Contemporary Family Lounge Makeover</h4>
+                <p>Stunning transformation from bare space to a luxurious family entertainment lounge featuring custom gypsum ceiling with LED strip lighting, elegant wall niches with ambient lighting, premium furniture, floating TV console, and sophisticated neutral color palette.</p>
+                <div class="project-details">
+                    <div class="detail-item">
+                        <span class="detail-label">Location:</span>
+                        <span class="detail-value">Lagos, Nigeria</span>
                     </div>
-                    <div class="project-info">
-                        <h4>Office Space Renovation</h4>
-                        <p>Modern workspace designed to inspire productivity.</p>
-                        <div class="project-details">
-                            <div class="detail-item"><span class="detail-label">Location:</span><span class="detail-value">Doha, Qatar</span></div>
-                            <div class="detail-item"><span class="detail-label">Duration:</span><span class="detail-value">5 Weeks</span></div>
-                        </div>
+                    <div class="detail-item">
+                        <span class="detail-label">Duration:</span>
+                        <span class="detail-value">4 Weeks</span>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
     </section>
 
     <section class="renovation-process">
