--- a/services.html
+++ b/services.html
@@ -189,11 +189,11 @@
             <div class="service-card">
                 <span class="service-icon">🛋️</span>
                 <h3>Furnishing Solutions</h3>
-                <p>Custom furniture and décor to complete your vision and bring your space to life.</p>
+                <p>Custom furniture and decor to complete your vision and bring your space to life.</p>
                 <ul class="service-list">
                     <li>Custom Furniture Design</li>
                     <li>Furniture Sourcing</li>
-                    <li>Décor & Accessories</li>
+                    <li>Decor & Accessories</li>
                     <li>Complete Styling</li>
                     <li>Window Treatments</li>
                     <li>Soft Furnishings</li>
