--- a/booking-form-formspree.html
+++ b/booking-form-formspree.html
@@ -238,7 +238,8 @@
                         <option value="QAR 10,000 - 25,000">QAR 10,000 - 25,000</option>
                         <option value="QAR 25,000 - 50,000">QAR 25,000 - 50,000</option>
                         <option value="QAR 50,000 - 100,000">QAR 50,000 - 100,000</option>
-                        <option value="Over QAR 100,000">Over QAR 100,000</option>
+                        <option value="QAR 100,000 - 500,000">QAR 100,000 - 500,000</option>
+                        <option value="Over QAR 500,000">Over QAR 500,000</option>
                     </select>
                 </div>
 
