--- a/booking-success.html
+++ b/booking-success.html
@@ -157,6 +157,22 @@
             color: #FFD700;
         }
 
+        /* Google Translate Widget Styling */
+        #google_translate_element {
+            padding: 10px;
+            text-align: right;
+            max-width: 240px;
+            margin-left: auto;
+        }
+        .goog-te-gadget { font-family: inherit !important; }
+        .goog-te-combo {
+            padding: 4px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+        .goog-te-banner-frame.skiptranslate { display: none !important; }
+        body { top: 0px !important; }
+
         @media (max-width: 768px) {
             .success-card {
                 padding: 40px 25px;
@@ -202,6 +218,8 @@
                 <li><a href="booking.html" class="cta-nav">Book Now</a></li>
             </ul>
         </nav>
+        
+        <div id="google_translate_element"></div>
     </header>
 
     <section class="success-container">
@@ -278,5 +296,38 @@
     </a>
 
     <script src="script.js"></script>
+
+    <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'ar,en,fr,hi,ur,es', 
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+        autoDisplay: false
+      }, 'google_translate_element');
+      
+      var checkDropdown = setInterval(function() {
+        var select = document.querySelector('.goog-te-combo');
+        if (select) {
+            var options = select.options;
+            for (var i = 0; i < options.length; i++) {
+              var value = options[i].value;
+              switch(value) {
+                case '':   options[i].text = 'Select Language'; break;
+                case 'ar': options[i].text = 'Arabic'; break;
+                case 'en': options[i].text = 'English'; break;
+                case 'es': options[i].text = 'Spanish'; break;
+                case 'fr': options[i].text = 'French'; break;
+                case 'hi': options[i].text = 'Hindi'; break;
+                case 'ur': options[i].text = 'Urdu'; break;
+              }
+            }
+            clearInterval(checkDropdown);
+        }
+      }, 100);
+    }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit&hl=en"></script>
+
 </body>
 </html>
