--- a/about.html
+++ b/about.html
@@ -245,7 +245,7 @@ body {
                 </div>
             </div>
             <div class="philosophy-item">
-                <img src="https://images.unsplash.com/photo-1615529328331-f8917597711f?w=800&q=80" alt="Luxury Materials">
+                <img src="prem.jpg" alt="Luxury Materials">
                 <div class="philosophy-content">
                     <h3>Premium Materials</h3>
                     <p>Every project features carefully selected high quality materials, from natural stone to custom woodwork, ensuring lasting beauty.</p>
@@ -315,6 +315,7 @@ body {
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="booking.html">Book Now</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="footer-section">
