--- a/booking-form-formspree.html
+++ b/booking-form-formspree.html
@@ -269,6 +269,14 @@
                     <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
                 </div>
 
+                <!-- Privacy Consent Checkbox -->
+<div class="form-group consent-group">
+    <input type="checkbox" id="privacy-consent" name="privacy_consent" required>
+    <label for="privacy-consent">
+        I agree to the processing of my personal data in accordance with the 
+        <a href="privacy-policy.html" target="_blank" style="color: #DAA520; text-decoration: underline;">Privacy Policy</a>
+    </label>
+</div>
                 <button type="submit" class="submit-btn" id="submitBtn">
                     Submit Booking Request
                 </button>
