--- a/portfolio.html
+++ b/portfolio.html
@@ -213,6 +213,7 @@
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="booking.html">Book Now</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="footer-section">
