--- a/portfolio.html
+++ b/portfolio.html
@@ -156,11 +156,11 @@
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1616594039964-ae9021a400a0?w=800" alt="Wardrobe"><div class="portfolio-overlay"><h3>Luxury Walk-in Wardrobe</h3><p>Custom closet system</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1600607687939-ce8a6c25118c?w=800" alt="Fine Dining"><div class="portfolio-overlay"><h3>Fine Dining Space</h3><p>Upscale environment</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1600210492493-0946911123ea?w=800" alt="Hotel Bedroom"><div class="portfolio-overlay"><h3>Boutique Hotel Style Bedroom</h3><p>Plush textiles</p></div></div>
-            <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1600607687644-aac4c3eac7f4?w=800" alt="Open Plan"><div class="portfolio-overlay"><h3>Open Plan Living</h3><p>Seamless transitions</p></div></div>
+            <div class="portfolio-item" onclick="openLightbox(this)"><img src="ibadan2.jpg" alt="Open Plan"><div class="portfolio-overlay"><h3>Open Plan Living</h3><p>Seamless transitions</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1600566752355-35792bedcfea?w=800" alt="Master Suite"><div class="portfolio-overlay"><h3>Master Suite Retreat</h3><p>Luxurious sanctuary</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1600210491369-e753d80a41f3?w=800" alt="Designer Living"><div class="portfolio-overlay"><h3>Designer Living Room</h3><p>Curated art pieces</p></div></div>
             <div class="portfolio-item instagram-item" onclick="window.open('https://www.instagram.com/p/DMKUG0toxku/', '_blank')"><img src="https://images.unsplash.com/photo-1600210492493-0946911123ea?w=800" alt="IG 1"><div class="portfolio-overlay"><h3>Featured IG Project 1</h3><p>Click to view on Instagram</p><span>📷</span></div></div>
-            <div class="portfolio-item instagram-item" onclick="window.open('https://www.instagram.com/p/DLhiuEAo3qm/', '_blank')"><img src="https://images.unsplash.com/photo-1615529328331-f8917597711f?w=800" alt="IG 2"><div class="portfolio-overlay"><h3>Featured IG Project 2</h3><p>Click to view on Instagram</p><span>📷</span></div></div>
+            <div class="portfolio-item instagram-item" onclick="window.open('https://www.instagram.com/p/DLhiuEAo3qm/', '_blank')"><img src="prem.jpg" alt="IG 2"><div class="portfolio-overlay"><h3>Featured IG Project 2</h3><p>Click to view on Instagram</p><span>📷</span></div></div>
             <div class="portfolio-item instagram-item" onclick="window.open('https://www.instagram.com/p/DLZ62ewo2vx/', '_blank')"><img src="https://images.unsplash.com/photo-1556912172-45b7abe8b7e1?w=800" alt="IG 3"><div class="portfolio-overlay"><h3>Featured IG Project 3</h3><p>Click to view on Instagram</p><span>📷</span></div></div>
             <div class="portfolio-item instagram-item" onclick="window.open('https://www.instagram.com/p/DLRsexRo50W/', '_blank')"><img src="https://images.unsplash.com/photo-1600607687644-c7171b42498f?w=800" alt="IG 4"><div class="portfolio-overlay"><h3>Featured IG Project 4</h3><p>Click to view on Instagram</p><span>📷</span></div></div>
             <div class="portfolio-item instagram-item" onclick="window.open('https://www.instagram.com/p/DLDCh-Zo7P_/', '_blank')"><img src="https://images.unsplash.com/photo-1600210491892-03d54c0aaf87?w=800" alt="IG 5"><div class="portfolio-overlay"><h3>Featured IG Project 5</h3><p>Click to view on Instagram</p><span>📷</span></div></div>
@@ -193,7 +193,7 @@
             </div>
             <div class="testimonial-card" style="background:white; padding:20px; border-radius:10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                 <p>"Professional, efficient, and stunning results. Our office is now the envy of our clients."</p>
-                <p><strong>- Ahmed K., Qatar</strong></p>
+                <p><strong>- Ahmed K., Nigeria</strong></p>
             </div>
         </div>
     </section>
