--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@ class="address-link">
 <div class="contact-card">
 <div class="contact-icon">🕐</div>
 <h3>Business Hours</h3>
-<p style="color: #666;">Saturday - Thursday<br>10:00 AM - 5:00 PM<br>Friday: Closed</p>
+<p style="color: #666;">Sunday - Thursday<br>10:00 AM - 5:00 PM<br>Friday And Saturday Closed</p>
 </div>
 </div>
 </section>
