--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
         <div class="portfolio-grid">
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?w=800" alt="Living Room"><div class="portfolio-overlay"><h3>Luxury Living Room</h3><p>Sophisticated neutral palette</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="bedroom.jpg" alt="Bedroom"><div class="portfolio-overlay"><h3>Plush Bedroom</h3><p>Cozy and elegant design</p></div></div>
-            <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1615529328331-f8917597711f?w=800" alt="Contemporary Suite"><div class="portfolio-overlay"><h3>Contemporary Bedroom Suite</h3><p>Bespoke furnishings</p></div></div>
+            <div class="portfolio-item" onclick="openLightbox(this)"><img src="comtemp.PNG" alt="Contemporary Suite"><div class="portfolio-overlay"><h3>Contemporary Bedroom Suite</h3><p>Bespoke furnishings</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="livingroom.jpg" alt="Plush Livingroom"><div class="portfolio-overlay"><h3>Plush Livingroom Interior</h3><p>Rich textures and elegant furnishings</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="https://images.unsplash.com/photo-1556912172-45b7abe8b7e1?w=800" alt="Gourmet Kitchen"><div class="portfolio-overlay"><h3>Modern Gourmet Kitchen</h3><p>Marble countertops</p></div></div>
             <div class="portfolio-item" onclick="openLightbox(this)"><img src="dining.jpg" alt="Dining Interior"><div class="portfolio-overlay"><h3>Exquisite Dining Interior</h3><p>Luxurious finishes</p></div></div>
