--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@ body {
 <h3>Contact Info</h3>
 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-<p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block E, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+<p>📍 <a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block E, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
         </div>
         <div class="footer-bottom">
