--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@ body {
 <div class="contact-icon">📍</div>
 <h3>Visit Us</h3>
 <p>Our office is located in the heart of Doha</p>
-<a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+E+Al+Mirqab+Al+Jadeed+St+Doha+Qatar"
+<a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration"
 target="_blank"
 class="address-link">
                     Office 70, 2nd Floor Block E,<br>
@@ -213,7 +213,7 @@ class="address-link">
 <h3>Contact Info</h3>
 <p>📧 <a href="mailto:info@omoginteriors.com" style="text-decoration:none; color:inherit;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="text-decoration:none; color:inherit;">+974 7102 1381</a></p>
-<p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+E+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="text-decoration:none; color:inherit;">
+<p>📍 <a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration" target="_blank" style="text-decoration:none; color:inherit;">
                     Office 70, 2nd Floor Block E,<br>
                     Al Mirqab Al Jadeed St, Doha
 </a></p>
@@ -253,7 +253,7 @@ class="address-link">
 <h3>Contact Info</h3>
 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-<p>📍 <a href="https://www.google.com/maps/search/?api=1&query=Office+70+2nd+Floor+Block+F+Al+Mirqab+Al+Jadeed+St+Doha+Qatar" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+<p>📍 <a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
 </div>
 <div class="footer-bottom">
