--- a/booking.html
+++ b/booking.html
@@ -327,16 +327,16 @@
                 <h3>Visit Our Office</h3>
                 
                 <div class="map-container">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.7473778531773!2d51.4988!3d25.2764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDE2JzM1LjAiTiA1McKwMjknNTUuNyJF!5e0!3m2!1sen!2sqa!4v1643456789012!5m2!1sen!2sqa" 
-                        allowfullscreen="" 
-                        loading="lazy" 
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.913396017346!2d51.5018591!3d25.2734986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e45db093ac1fd4d%3A0xa664277e377e8b32!2sOmo%20G%20Trading%20And%20Interior%20Decoration!5e0!3m2!1sen!2sqa!4v1770721870926!5m2!1sen!2sqa"
+                        allowfullscreen=""
+                        loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
 
                 <p>Drop by our office in Doha</p>
-                <a href="https://maps.google.com/Omo G Trading And Interior Decoration" target="_blank" style="font-weight: bold; text-decoration: underline; color: #d4af37;">
+                <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="font-weight: bold; text-decoration: underline; color: #d4af37;">
                     Office 70, 2nd Floor Block E,<br>
                     Al Mirqab Al Jadeed St, Doha
                 </a>
@@ -378,7 +378,7 @@
                 <h3>Contact Info</h3>
                 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
                 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-                <p>📍 <a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block E, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+                <p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block E, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
             </div>
         </div>
         <div class="footer-bottom">
