--- a/newbookings.html
+++ b/newbookings.html
@@ -309,7 +309,7 @@
                 </div>
 
                 <p>Drop by our office in Doha</p>
-                <a href="https://maps.google.com/Omo G Trading And Interior Decoration" target="_blank" style="font-weight: bold; text-decoration: underline; color: #d4af37;">
+                <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="font-weight: bold; text-decoration: underline; color: #d4af37;">
                     Office 70, 2nd Floor Block F,<br>
                     Al Mirqab Al Jadeed St, Doha
                 </a>
@@ -350,7 +350,7 @@
                 <h3>Contact Info</h3>
                 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
                 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-                <p>📍 <a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+                <p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
             </div>
         </div>
         <div class="footer-bottom">
