--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@ body {
 <div class="contact-icon">📍</div>
 <h3>Visit Us</h3>
 <p>Our office is located in the heart of Doha</p>
-<a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration"
+<a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA"
 target="_blank"
 class="address-link">
                     Office 70, 2nd Floor Block E,<br>
@@ -208,15 +208,18 @@ class="address-link">
 <h2>Our Location</h2>
 <p>Find us in Doha, Qatar</p>
 </div>
-<div class="location-info">
-<div class="footer-section">
+<div class="location-info" style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
+<div class="footer-section" style="flex: 1; min-width: 300px;">
 <h3>Contact Info</h3>
 <p>📧 <a href="mailto:info@omoginteriors.com" style="text-decoration:none; color:inherit;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="text-decoration:none; color:inherit;">+974 7102 1381</a></p>
-<p>📍 <a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration" target="_blank" style="text-decoration:none; color:inherit;">
+<p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="text-decoration:none; color:inherit;">
                     Office 70, 2nd Floor Block E,<br>
                     Al Mirqab Al Jadeed St, Doha
 </a></p>
+</div>
+<div class="map-container" style="flex: 1; min-width: 300px;">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.913396017346!2d51.5018591!3d25.2734986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e45db093ac1fd4d%3A0xa664277e377e8b32!2sOmo%20G%20Trading%20And%20Interior%20Decoration!5e0!3m2!1sen!2sqa!4v1770721870926!5m2!1sen!2sqa" width="100%" height="450" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 </div>
 </section>
@@ -253,7 +256,7 @@ class="address-link">
 <h3>Contact Info</h3>
 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-<p>📍 <a href="https://www.google.com/maps/search/Omo G Trading And Interior Decoration" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+<p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
 </div>
 </div>
 <div class="footer-bottom">
