--- a/booking-success.html
+++ b/booking-success.html
@@ -263,7 +263,7 @@
                 <div class="contact-links">
                     <a href="mailto:bookings@omoginteriors.com">📧 Email Us</a>
                     <a href="https://wa.me/97471021381" target="_blank">💬 WhatsApp</a>
-                    <a href="https://instagram.com/omogbackup" target="_blank">📸 Instagram</a>
+                    <a href="https://www.instagram.com/omogdecor?igsh=MWRvazZybDYwaGR6aw==" target="_blank">📸 Instagram</a>
                 </div>
             </div>
         </div>
