--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@ body {
 target="_blank"
 class="address-link">
                     Office 70, 2nd Floor Block E,<br>
-                    Al Mirqab Al Jadeed St, Doha
+                    Al Mirqab Mall, Doha
 </a>
 </div>
 <div class="contact-card">
@@ -215,7 +215,7 @@ class="address-link">
 <p>📱 <a href="tel:+97471021381" style="text-decoration:none; color:inherit;">+974 7102 1381</a></p>
 <p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="text-decoration:none; color:inherit;">
                     Office 70, 2nd Floor Block E,<br>
-                    Al Mirqab Al Jadeed St, Doha
+                    Al Mirqab Mall, Doha
 </a></p>
 </div>
 <div class="map-container" style="flex: 1; min-width: 300px;">
@@ -256,7 +256,7 @@ class="address-link">
 <h3>Contact Info</h3>
 <p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
-<p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Al Jadeed St, Doha, Qatar</a></p>
+<p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Mall, Doha, Qatar</a></p>
 </div>
 </div>
 <div class="footer-bottom">
