Update documentation text for consistency
Removed hyphen from 'as-built' for consistency.

--- a/services.html
+++ b/services.html
@@ -360,7 +360,7 @@ body {
             <div class="compliance-card">
                 <h3>Project Documentation & Handover</h3>
                 <p>
-                    Comprehensive documentation including as-built drawings, warranties, and
+                    Comprehensive documentation including as built drawings, warranties, and
                     maintenance guides are provided upon project completion.
                 </p>
             </div>
