Fix spelling of 'decor' in service description

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 <div class="service-card">
 <span class="service-icon">🛋️</span>
 <h3>Furnishing Solutions</h3>
-<p>Custom furniture and décor to complete your vision</p>
+<p>Custom furniture and decor to complete your vision</p>
 </div>
 </div>
 <div style="text-align: center; margin-top: 3rem;">
