Enhance SEO and update booking call-to-action
Updated various text elements to reflect 'Book Free Consultation' instead of 'Book Now'. Added structured data for local business and enhanced the trust section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>OMO G Trading And Interior Decoration | Qatar</title>
+<meta name="description" content="Luxury interior design, renovation and furnishing services in Doha, Qatar. OMO G transforms homes and commercial spaces with premium finishes.">
+<link rel="canonical" href="https://omoginteriors.com/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="OMO G Trading And Interior Decoration | Qatar">
+<meta property="og:description" content="Luxury interior design, renovation and furnishing services in Doha, Qatar. OMO G transforms homes and commercial spaces with premium finishes.">
+<meta property="og:url" content="https://omoginteriors.com/">
+<meta property="og:image" content="https://omoginteriors.com/logo.png">
+<script type="application/ld+json">
+{
+  "": "https://schema.org",
+  "": "LocalBusiness",
+  "name": "OMO G Trading And Interior Decoration",
+  "url": "https://omoginteriors.com",
+  "image": "https://omoginteriors.com/logo.png",
+  "telephone": "+97471021381",
+  "email": "info.com",
+  "address": {
+    "": "PostalAddress",
+    "streetAddress": "Office 70, 2nd Floor Block E, Al Mirqab Mall",
+    "addressLocality": "Doha",
+    "addressCountry": "QA"
+  },
+  "sameAs": [
+    "https://www.instagram.com/omogdecor"
+  ]
+}
+</script>
 
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -211,6 +238,34 @@
         opacity: 0.7;
     }
 
+    .trust-strip {
+        background: rgba(255, 255, 255, 0.08);
+        border: 1px solid rgba(255, 255, 255, 0.22);
+        backdrop-filter: blur(8px);
+        border-radius: 14px;
+        display: inline-flex;
+        gap: 1rem;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 0.8rem 1.2rem;
+        margin-top: 2rem;
+        color: #f5f5f5;
+        font-size: 0.92rem;
+    }
+
+    .trust-strip span {
+        opacity: 0.95;
+    }
+
+    .trust-dot {
+        color: #d4af37;
+        margin: 0 0.15rem;
+    }
+
+    .process-section {
+        background: linear-gradient(180deg, #faf7f2 0%, #ffffff 100%);
+    }
+
     /* Responsive adjustments */
     @media (max-width: 768px) {
         .hero {
@@ -306,7 +361,7 @@
 <li><a href="portfolio.html">Portfolio</a></li>
 <li><a href="renovations.html">Renovations</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li><a href="booking.html">Book Now</a></li>
+<li><a href="booking.html">Book Free Consultation</a></li>
 </ul>
 </nav>
 
@@ -326,8 +381,12 @@
 <p class="hero-tagline">Bespoke Interior Design for Qatar's Most Discerning Clients</p>
 <p>From contemporary elegance to timeless sophistication, we transform your space into a masterpiece that reflects your unique story</p>
 <div class="hero-buttons">
-<a href="booking.html" class="btn-primary">Start Your Transformation</a>
+<a href="booking.html" class="btn-primary">Book Free Consultation</a>
 <a href="portfolio.html" class="btn-secondary">Explore Our Work</a>
+</div>
+<div class="trust-strip">
+<span>CR No: 235664</span><span class="trust-dot">•</span>
+<span>Response within 1 business day</span>
 </div>
 </div>
 <div class="scroll-indicator"></div>
@@ -421,6 +480,45 @@
 </div>
 </section>
 
+<section class="process-section">
+<div class="section-header">
+<h2>How We Work</h2>
+<p>A clear process from concept to handover</p>
+</div>
+<div class="process-grid">
+<div class="process-step">
+<div class="step-number">1</div>
+<h3>Consultation</h3>
+<p>We understand your vision, scope, style preferences, and budget to define project goals.</p>
+</div>
+<div class="process-step">
+<div class="step-number">2</div>
+<h3>Design & Planning</h3>
+<p>Our team prepares concept direction, materials, and practical layout decisions tailored to your space.</p>
+</div>
+<div class="process-step">
+<div class="step-number">3</div>
+<h3>Execution</h3>
+<p>We coordinate installation, finishing, and quality checks with consistent project communication.</p>
+</div>
+<div class="process-step">
+<div class="step-number">4</div>
+<h3>Quality Check</h3>
+<p>Every detail is reviewed against standards before final handover and client walkthrough.</p>
+</div>
+<div class="process-step">
+<div class="step-number">5</div>
+<h3>Handover</h3>
+<p>Final review, detailing, and clean handover so your space is ready for immediate use.</p>
+</div>
+<div class="process-step">
+<div class="step-number">6</div>
+<h3>Aftercare Support</h3>
+<p>We stay available for adjustments, guidance, and support after project completion.</p>
+</div>
+</div>
+</section>
+
 <div id="lightbox" class="lightbox">
 <span class="lightbox-close" onclick="closeLightbox()">×</span>
 <img class="lightbox-content" id="lightbox-img">
@@ -436,7 +534,7 @@
 <div class="cta-content">
 <h2>Ready to Transform Your Space?</h2>
 <p>Let's create something beautiful together</p>
-<a href="booking.html" class="btn-primary">Schedule a Consultation</a>
+<a href="booking.html" class="btn-primary">Book Free Consultation</a>
 </div>
 </section>
 
@@ -455,7 +553,7 @@
 <li><a href="portfolio.html">Portfolio</a></li>
 <li><a href="renovations.html">Renovations</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li><a href="booking.html">Book Now</a></li>
+<li><a href="booking.html">Book Free Consultation</a></li>
 <li><a href="privacy-policy.html">Privacy Policy</a></li>
 </ul>
 </div>
